# ansible-role-openresty

./: .travis.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
action_plugins/: template_configs.py
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  create.yml  destroy.yml  molecule.yml  verify.yml
tasks/: main.yml
templates/: logging.conf  nginx.conf  oauth.conf  prometheus_metrics.conf  proxy.conf  rate_limit.conf  ssl.conf
