[tool.poetry]
name = "ansible-role-openresty"
version = "0.1.0"
description = ""
authors = ["Dani Hodovic <dani.hodovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.4.4"
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.1"
jinja2 = "^2.11.1"
pudb = "^2019.2"
ptipython = "^1.0.1"
ptpython = "^3.0.1"
icdiff = "^1.9.1"
docker = "^4.2.0"
pyyaml = "^5.3.1"
ansible = "^2.9.6"
molecule = "^3.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
